# SplashClub

./: .gitignore  Makefile  README.md  main.py  pyproject.toml  room_test.py  start.sh
client/: index.html  package.json
client/src/: App.tsx  const.ts  index.css  types.ts
client/src/components/: Button.tsx  GameApp.tsx  Input.tsx  ThemeSwitcher.tsx  Toast.tsx
client/src/containers/: Login.tsx  Prompt.tsx  Results.tsx  Vote.tsx  Waiting.tsx
client/src/hooks/: useGameWebSocket.ts
client/src/theme/: ThemeContext.tsx  theme.tsx
client/src/utils/: storage.ts
http/app/: package.json
http/app/src/: index.js
jill_box/: __init__.py  connection_manager.py  contracts.py  game.py  game_state_manager.py  game_test.py  message_router.py  server.py  websocket_server.py
jill_box/handlers/: base_handler.py  game_handlers.py  room_handlers.py
jill_box/utils/: error_handling.py  websocket_utils.py
splash_club/: connection_manager.py  contracts.py  game.py  game_state_manager.py  message_router.py  websocket_server.py
splash_club/handlers/: base_handler.py  game_handlers.py  room_handlers.py
splash_club/utils/: error_handling.py  websocket_utils.py
tests/: game_test.py  test_prompt_game.py  test_rejoin_sync.py  test_websocket_server.py
